--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,6 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import './assets/styles/base/index.css';
+
+@import 'tailwindcss/components';
+@import './assets/styles/components/index.css';
+
+@import 'tailwindcss/utilities';
+@import './assets/styles/utilities/index.css';
 
 html {
   font-size: 62.5%; /* Now 10px = 1rem! */
