--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -12,7 +12,6 @@ html {
 }
 
 body {
+  @apply font-display bg-main antialiased text-base;
   font-size: 1.6rem;
-  -webkit-font-smoothing: antialiased;
-  background-color: #151515;
 }
